website/versioned_docs/version-2.0.x/docs/introduction/getting-started/installing-pants.mdx
---
    title: Installing Pants
    position: 0
---



---

# Prerequisites

To run Pants, you need:

- Linux (x86_64) or macOS. 
- Python 3.6+ discoverable on your `PATH`.
- Internet access (so that Pants can fully bootstrap itself).
[block:callout]
{
  "type": "warning",
  "body": "On Ubuntu you may need to run:\n`apt install -y python3-dev python3-distutils`.",
  "title": "Some Linux distributions may need additional packages"
}
[/block]

[block:callout]
{
  "type": "warning",
  "title": "Alpine Linux is not yet supported",
  "body": "Pants for Linux is currently distributed as a manylinux wheel. Alpine Linux is not covered by manylinux (it uses MUSL libc while manylinux requires glibc), so at present Pants will not run on Alpine Linux. \n\nIf you need to run Pants on Alpine, [let us know](doc:community), so we can prioritize this work.\n\nMeanwhile, you can try [building Pants yourself](#building-pants-from-sources) on Alpine."
}
[/block]

[block:callout]
{
  "type": "warning",
  "title": "Linux on ARM is not yet supported",
  "body": "Pants for Linux is currently only distributed as an x86_64 wheel.\n\nIf you need to run Pants on ARM, [let us know](doc:community), so we can prioritize this work.\n\nMeanwhile you can try [building Pants yourself](#building-pants-from-sources) on ARM."
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Python 2 compatibility",
  "body": "Pants requires Python 3.6+ to run itself, but it can build Python 2 code."
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Using a proxy?",
  "body": "See [Proxies](doc:proxies) for instructions."
}
[/block]
# Creating the launch script
Pants is invoked via a launch script named `./pants` , saved at the root of the repository.

First, set up a minimal `pants.toml` config file to instruct the script to download the latest 2.0.x release:

```bash
printf '[GLOBAL]\npants_version = "2.0.2r"\n' > pants.toml
```

Then, download the script:

```bash
curl -L -o ./pants https://pantsbuild.github.io/setup/pants && \
chmod +x ./pants
```

Now, run this to bootstrap Pants and to verify the version it installs:

```bash
./pants --version
```
[block:callout]
{
  "type": "info",
  "title": "Tip: add `./pants` to version control",
  "body": "This will allow all users in the project to use Pants without having to install it themselves."
}
[/block]

[block:api-header]
{
  "title": "Building Pants from sources"
}
[/block]
We currently distribute Pants for Linux (x86_64) and MacOS.

If you need to run Pants on some other platform, such as Linux on ARM, or Alpine Linux, you can try building it yourself by checking out the [Pants repo](https://github.com/pantsbuild/pants), and running `build-support/bin/release.sh -q`.